--- a/res/css/common.css
+++ b/res/css/common.css
@@ -28,11 +28,11 @@ input[type="tel"]{caret-color: #ef0775;-webkit-user-select:auto;user-select:auto
 
 
 header {
-  padding: 8px 16px;
+  padding: 16px;
 }
 .mid_bar {
-  margin: 0 60px !important;
-  border-radius: 22px;
+  margin: 0 64px !important;
+  border-radius: 24px;
 }
 .depth_1 li {
   display: inline-block;
@@ -42,7 +42,7 @@ header {
   display: inline-block;
   margin: 0 4px;
   padding: 12px;
-  font-size: .875em;
+  font-size: 1rem;
   color: rgba(0,0,0,.7);
 }
 
@@ -54,8 +54,8 @@ header {
     position: absolute;
     top: 0;
     left: 0;
-    width: 44px;
-    height: 44px;
+    width: 48px;
+    height: 48px;
     border-radius: 100%;
 }
 
@@ -63,28 +63,27 @@ header {
     position: absolute;
     top: 0;
     right: 0;
-    width: 44px;
-    height: 44px;
+    width: 48px;
+    height: 48px;
     border-radius: 100%;
 }
 
 #nav_depth_1 {
     position: relative;
-    margin-bottom: 8px;
+    margin-bottom: 16px;
 }
 
 .depth_2 li {
     display: inline-block;
     width: auto;
-    margin: 8px 16px 8px 0;
 }
 
 .depth_2 li a {
     display: inline-block;
     padding: 4px 12px;
-    font-size: .875em;
+    font-size: 1rem;
     color: rgba(0,0,0,.7);
-    border-radius: 15px;
+    border-radius: 16px;
 }
 
 .font_zero {
@@ -109,11 +108,11 @@ footer .info {
 
 footer .info a {
     padding: 10px 8px;
-    font-size: 0.875rem;
+    font-size: 1rem;
 }
 
 footer .copyright {
-    font-size: 0.75rem;
+    font-size: 0.875rem;
     text-align: center;
 }
 
