--- a/res/css/common.css
+++ b/res/css/common.css
@@ -41,7 +41,7 @@ header {
 .depth_1 li a{
   display: inline-block;
   margin: 0 4px;
-  padding: 12px;
+  padding: 10px 12px;
   font-size: 1rem;
   color: rgba(0,0,0,.7);
 }
@@ -54,8 +54,8 @@ header {
     position: absolute;
     top: 0;
     left: 0;
-    width: 48px;
-    height: 48px;
+    width: 44px;
+    height: 44px;
     border-radius: 100%;
 }
 
@@ -63,8 +63,8 @@ header {
     position: absolute;
     top: 0;
     right: 0;
-    width: 48px;
-    height: 48px;
+    width: 44px;
+    height: 44px;
     border-radius: 100%;
 }
 
@@ -80,7 +80,7 @@ header {
 
 .depth_2 li a {
     display: inline-block;
-    padding: 4px 12px;
+    padding: 0.2rem 0.6rem;
     font-size: 1rem;
     color: rgba(0,0,0,.7);
     border-radius: 16px;
@@ -120,11 +120,6 @@ footer {
     padding-bottom: 64px;
 }
 
-#nav_depth_2 {
-    position: relative;
-}
-
-
 .border_box_all {
     box-sizing: border-box;
 }
@@ -145,4 +140,20 @@ footer {
     height: 46px;
     background: #fff;
     z-index: 10;
+}
+
+.depth_2 {
+    display: inline-block;
+}
+
+#nav_depth_2 {
+    display: flex;
+}
+
+#btn_menu svg, #btn_search svg {
+    margin: auto;
+}
+
+.flex {
+    display: flex;
 }
