--- a/res/css/common.css
+++ b/res/css/common.css
@@ -202,16 +202,9 @@ footer {
 
 article{
   height: 300px;
+  background: #000;
 }
 
-article.box1{
-  background: #333
-}
-
-article.box2{
-  background: #111
-}
-
-article.box3{
-  background: #dsdsds
+article div{
+  color: #fff;
 }
