--- a/res/css/common.css
+++ b/res/css/common.css
@@ -51,12 +51,14 @@ header {
 }
 
 #btn_menu {
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: fixed;
+    top: 16px;
+    left: 16px;
     width: 44px;
     height: 44px;
     border-radius: 100%;
+    transition: width 0.5s ease,height 0.5s ease, border-radius 0.5s 0.25s ease;
+    z-index: 10;
 }
 
 #btn_search {
@@ -207,4 +209,83 @@ article{
 
 article div{
   color: #fff;
+}
+
+#btn_menu.on {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+    border-color: transparent;
+    transform: translate(-16px, -16px);
+    transition: width 0.5s ease,height 0.5s ease;
+    z-index: 10;
+}
+
+.box44 {
+    width: 44px;
+    height: 44px;
+}
+
+#btn_menu.on .box44 {
+    position: absolute;
+    top: 16px;
+    left: 16px;
+}
+
+.icon_menu_inner {
+    transition-timing-function: cubic-bezier(.55,.055,.675,.19);
+    transition-duration: .22s;
+    margin-top: -1px;
+    top: 50%;
+}
+
+.icon_menu_inner, .icon_menu_inner:before, .icon_menu_inner:after {
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    transition-timing-function: ease;
+    transition-duration: .15s;
+    transition-property: transform;
+    border-radius: 2px;
+    background-color: #EA002C;
+}
+
+.icon_menu_inner:before, .icon_menu_inner:after {content: '';display: block;}
+
+.icon_menu_inner:before {
+    top: -5px;
+    transition: top .1s ease-in .25s,opacity .1s ease-in;
+}
+
+.icon_menu_inner:after {
+    bottom: -5px;
+    transition: bottom .1s ease-in .25s,transform .22s cubic-bezier(.55,.055,.675,.19);
+}
+
+.icon_menu {
+    position: relative;
+    margin: auto;
+    width: 20px;
+    height: 12px;
+    transition-timing-function: linear;
+    transition-duration: .15s;
+    transition-property: opacity,filter;
+}
+
+#btn_menu.on .icon_menu_inner {
+    transition-delay: .12s;
+    transition-timing-function: cubic-bezier(.215,.61,.355,1);
+    transform: rotate(225deg);
+}
+
+#btn_menu.on .icon_menu_inner:before {
+    top: 0;
+    transition: top .1s ease-out,opacity .1s ease-out .12s;
+    opacity: 0;
+}
+
+#btn_menu.on .icon_menu_inner:after {
+    bottom: 0;
+    transition: bottom .1s ease-out,transform .22s cubic-bezier(.215,.61,.355,1) .12s;
+    transform: rotate(-90deg);
 }
