--- a/res/css/common.css
+++ b/res/css/common.css
@@ -5,7 +5,7 @@
 *:not(input){font-family:"Noto Sans KR";-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;-webkit-tap-highlight-color:transparent;}
 *:focus {outline: none;}
 a{text-decoration: none;color: inherit;}
-body{margin:0;font-size:1rem;font-weight: normal;line-height:1.5;color: #222;text-align: left;background-color: #fff;overflow-x: hidden;scroll-behavior: smooth;/* overflow: auto; *//* height: 100vh; *//* padding-bottom: 70px; *//* margin-top: 89.5px; */}
+body{position: relative;margin:0;padding: 0;line-height:1.5;color: #222;background-color: #eff2f8;scroll-behavior: smooth;overflow-x: hidden;word-break: break-all;}
 body.type2{margin-top: 46.8px;/* background-color: #fff; */margin-bottom: 52px;}
 *::-webkit-scrollbar{display:none;width: 0;}
 
@@ -241,7 +241,7 @@ article div{
 }
 
 .wrap {
-    margin-top: 104px;
+    margin: 104px auto 0;
 }
 
 #search_wrap {
@@ -274,15 +274,6 @@ article div{
     display: none;
 }
 
-.sch {
-    position: relative;
-    padding: 0 60px 0 16px;
-    height: 44px;
-    line-height: 44px;
-    border: 2px solid #EA002C;
-    border-radius: 44px;
-}
-
 .sch button {
     position: absolute;
     top: 0;
@@ -310,7 +301,9 @@ input, button {
 }
 
 .lay_wrap {
-    margin: 0 16px 32px;
+    max-width: 568px;
+    margin: 0 auto 1rem;
+    padding: 0 16px;
 }
 
 .flex > img {
@@ -331,14 +324,14 @@ input, button {
 }
 
 .bmk {
-    max-width: 280px;
-    margin: 0 auto 40px;
+    padding: 0 55px;
+    max-width: 400px;
 }
 
 .bmk .box .img {
     margin-bottom: 4px;
-    width: 44px;
-    height: 44px;
+    width: 80%;
+    height: auto;
 }
 
 .bmk .box .txt {
@@ -347,11 +340,80 @@ input, button {
 }
 
 .ad_bnr {
-    margin-bottom: 40px;
-    max-height: 60px;
 }
 
 .ad_bnr img {
     width: 100%;
     height: auto;
+}
+
+.sch .sch_form {
+    position: relative;
+    padding: 0 60px 0 16px;
+    height: 44px;
+    line-height: 44px;
+    border: 2px solid #EA002C;
+    border-radius: 44px;
+}
+
+.lay_wrap.full {
+    padding: 0;
+}
+
+.line_cut {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.center {
+    text-align: center;
+}
+
+.tit_wrap .tit {
+    margin-bottom: 16px;
+    font-size: 1.125rem;
+    line-height: 44px;
+}
+
+.tit_wrap .more::before {position: absolute;margin-top: -0.05rem;margin-left: -0.4rem;top: 50%;left: 50%;width: 0.8rem;height: 0.1rem;}
+
+.tit_wrap {
+    position: relative;
+}
+
+h1,h2,h3,h4,h5,h6 {
+    margin: 0;
+    padding: 0;
+}
+
+.tit_wrap .more {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 44px;
+    height: 44px;
+}
+
+.more::after, .more::before {
+    content: '';
+    display: block;
+    background: #009DFF;
+}
+
+.tit_wrap .more::after {
+    position: absolute;
+    margin-top: -0.4rem;
+    margin-left: -0.05rem;
+    top: 50%;
+    right: 50%;
+    width: 0.1rem;
+    height: 0.8rem;
+}
+
+html {}
+
+#cnt {
+    max-width: 750px;
+    background: #fff;
 }
