--- a/res/css/common.css
+++ b/res/css/common.css
@@ -458,3 +458,59 @@ hr {
     border: 0.5px solid #EA002C;
     border-radius: 6px;
 }
+
+#pid_home .wrap {
+    margin: 0 auto;
+    max-width: 750px;
+    background: #fff;
+}
+
+
+hr {
+    margin: 0;
+    padding: 0;
+    height: 8px;
+    border: 0;
+    background: #eff2f8;
+}
+
+#pid_home .art_wrap {
+    margin-top: 60px;
+}
+
+
+
+.cnt_type1 > li:first-child {
+    margin-left: 16px;
+}
+
+.cnt_type1 > li {
+    width: 160px !important;
+}
+
+.cnt_type1 .img_wrap {
+    width: 160px;
+    height: 90px;
+}
+
+.cnt_type1 .img_wrap img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.cnt_type1 .name .tit {
+    font-size: 0.875rem;
+}
+
+.cnt_type1 .name .cate_name {
+    padding: 0 5px;
+    font-size: 0.750rem;
+    color: #EA002C;
+    border: 0.5px solid #EA002C;
+    border-radius: 6px;
+}
+
+.cnt_type1 > li:last-child {
+    margin-right: 16px;
+}
