--- a/res/css/common.css
+++ b/res/css/common.css
@@ -104,11 +104,11 @@ header #mypage.on {width: 100%;height: 100%;border-radius: 0;border-color: trans
 
 /* title */
 .tit_wrap {position: relative;}
-.tit_wrap .tit {margin-bottom: 16px;font-size: 1.125rem;line-height: 44px;}
-.tit_wrap .more {position: absolute;top: 0;right: 0;width: 44px;height: 44px;}
+.tit_wrap .tit {margin-bottom: 4px;font-size: 1.125rem;line-height: 44px;}
+.tit_wrap .more {position: absolute;top: 0;right: -16px;width: 44px;height: 44px;}
 .tit_wrap .more::after, .more::before {content: '';display: block;position: absolute;background: #009DFF;}
-.tit_wrap .more::after {margin-top: -0.4rem;margin-left: -0.05rem;top: 50%;right: 50%;width: 0.1rem;height: 0.8rem;}
-.tit_wrap .more::before {margin-top: -0.05rem;margin-left: -0.4rem;top: 50%;left: 50%;width: 0.8rem;height: 0.1rem;}
+.tit_wrap .more::after {top: calc(50% - 6px);left: calc(50% - 1px);width: 2px;height: 12px;}
+.tit_wrap .more::before {top: calc(50% - 1px);left: calc(50% - 6px);width: 12px;height: 2px;}
 
 
 /* cnt_type1 */
