--- a/res/css/common.css
+++ b/res/css/common.css
@@ -15,7 +15,7 @@ table{border-spacing: 0;}
 h1,h2,h3,h4,h5,h6 {margin: 0;padding: 0;}
 hr {margin: 0;padding: 0;height: 8px;border: 0;background: #eff2f8;}
 
-body{position: relative;margin:0;padding: 0;line-height:1.5;color: #222;background-color: #eff2f8;scroll-behavior: smooth;overflow-x: hidden;word-break: break-all;}
+body{position: relative;margin:0;padding: 0;line-height:1.5;color: #222;scroll-behavior: smooth;overflow-x: hidden;word-break: break-all;}
 
 /* Input box cursor color*/
 input[type="password"],
@@ -26,7 +26,7 @@ input[type="tel"]{caret-color: #EA002C;-webkit-user-select:auto;user-select:auto
 
 
 /* 공통스타일 */
-.backdrop_st01 {background: rgba(249,249,249,.78);backdrop-filter: blur(20px);-webkit-backdrop-filter: blur(20px);border: 0.5px solid rgba(0,0,0,.05);/* box-shadow: 0px 3px 6px 0 rgba(0,0,0,0.16); */}
+.backdrop_st01 {background: rgba(249,249,249,.78);backdrop-filter: blur(20px);-webkit-backdrop-filter: blur(20px);border: 0.5px solid rgba(0,0,0,.05);}
 .margin {margin: 0 16px;}
 img {width: 100%;height: auto;vertical-align: top;}
 .flex {display: flex;}
@@ -61,7 +61,7 @@ header .depth_2 li a {display: inline-block;padding: 0.2rem 0.6rem;font-size: 1r
 
 
 /* 메뉴 버튼 */
-header #btn_menu {position: absolute;top: 16px;left: 16px;width: 44px;height: 44px;border-radius: 44px;z-index: 11;}
+header #btn_menu {position: fixed;top: 16px;left: 16px;width: 44px;height: 44px;border-radius: 44px;z-index: 11;}
 header #btn_menu .icon_menu {position: relative;margin: auto;width: 20px;transition-timing-function: linear;transition-duration: .15s;transition-property: opacity,filter;}
 header #btn_menu .icon_menu_inner {margin-top: -1px; top: 50%;transition-timing-function: cubic-bezier(.55,.055,.675,.19);transition-duration: .22s;}
 header #btn_menu .icon_menu_inner:before, .icon_menu_inner:after {content: '';display: block;}
@@ -86,7 +86,7 @@ footer {padding-bottom: 64px;}
 
 
 /* 마이페이지 */
-header #mypage {position: absolute;top: 16px;left: 16px;width: 44px;height: 44px;border-radius: 44px;transition: width 0.3s ease,height 0.3s ease, border-radius 0.3s 0.1s ease;z-index: 10;}
+header #mypage {position: fixed;top: 16px;left: 16px;width: 44px;height: 44px;border-radius: 44px;transition: width 0.3s ease,height 0.3s ease, border-radius 0.3s 0.1s ease;z-index: 10;}
 header #mypage.on {width: 100%;height: 100%;border-radius: 0;border-color: transparent;transform: translate(-16px, -16px);transition: width 0.3s ease,height 0.3s ease;z-index: 10;}
 
 
