--- a/res/css/home.css
+++ b/res/css/home.css
@@ -1,4 +1,4 @@
-#pid_home .wrap {margin: 0 auto;max-width: 750px;background: #fff;}
+#pid_home .wrap {}
 #pid_home .art_wrap {margin-top: 60px;}
 #pid_home .logo img {width: 48px;}
 #pid_home .logo {margin-bottom: 2rem;text-align: center;}
