--- a/res/css/common.css
+++ b/res/css/common.css
@@ -83,7 +83,7 @@ footer .info {padding: 24px 0 10px;text-align: center;font-size: 0;}
 footer .info a {padding: 10px 8px;font-size: 1rem;}
 footer .copyright {font-size: 0.875rem;text-align: center;}
 footer {padding-bottom: 64px;}
-
+footer .ad_wrap {max-width: 568px;margin: 0 auto;padding: 0 16px;}
 
 /* 마이페이지 */
 header #mypage {position: fixed;top: 16px;left: 16px;width: 44px;height: 44px;border-radius: 44px;transition: width 0.3s ease,height 0.3s ease, border-radius 0.3s 0.1s ease;z-index: 10;}
