--- a/res/css/common.css
+++ b/res/css/common.css
@@ -120,7 +120,7 @@ header #mypage.on {width: 100%;height: 100%;border-radius: 0;border-color: trans
 .cnt_type1 .img_wrap {margin-bottom: 4px;width: 160px;height: 90px;}
 .cnt_type1 .img_wrap img {width: 100%;height: 100%;object-fit: cover;}
 .cnt_type1 .name .tit {font-size: 0.938rem;}
-.cnt_type1 .name .cate_name {padding: 0 5px;font-size: 0.750rem;color: #EA002C;border: 0.5px solid #EA002C;border-radius: 6px;}
+.cnt_type1 .name .cate_name {position: relative;top: -2px;padding: 0 5px;font-size: 0.750rem;color: #EA002C;border: 0.5px solid #EA002C;border-radius: 6px;}
 .cnt_type1 .name {height: 2.8rem;line-height: 1.4;}
 
 
