--- a/res/css/common.css
+++ b/res/css/common.css
@@ -122,3 +122,16 @@ header #mypage.on {width: 100%;height: 100%;border-radius: 0;border-color: trans
 .cnt_type1 .name .tit {font-size: 0.938rem;}
 .cnt_type1 .name .cate_name {position: relative;top: -2px;padding: 0 5px;font-size: 0.750rem;color: #EA002C;border: 0.5px solid #EA002C;border-radius: 6px;}
 .cnt_type1 .name {height: 2.8rem;line-height: 1.4;}
+
+/* home */
+#pid_home .art_wrap {margin-top: 60px;min-height: 0;}
+#pid_home .logo img {width: 48px;}
+#pid_home .logo {margin-bottom: 2rem;text-align: center;}
+#pid_home .mid_bar {display: none;}
+
+/* 북마크 */
+#pid_home .bmk {padding: 0 55px;max-width: 360px;}
+#pid_home .bmk .flex {flex-flow: wrap;}
+#pid_home .bmk .box {width: 25%;text-align: center;}
+#pid_home .bmk .box .img {margin-bottom: 4px;width: 80%;height: auto;}
+#pid_home .bmk .box .txt {margin-bottom: 8px;font-size: 0.750rem;}
