--- a/res/css/common.css
+++ b/res/css/common.css
@@ -95,7 +95,7 @@ header #mypage.on {width: 100%;height: 100%;border-radius: 0;border-color: trans
 /* lay_out */
 #cnt {max-width: 750px;background: #fff;}
 .lay_wrap.full {padding: 0;}
-.lay_wrap {max-width: 568px;margin: 0 auto 2rem;padding: 0 16px;}
+.lay_wrap {max-width: 568px;margin: 0 auto;padding: 0 16px;}
 .art_wrap {margin-top: 104px;min-height: 200vh;}
 
 /* search */
@@ -106,8 +106,8 @@ header #mypage.on {width: 100%;height: 100%;border-radius: 0;border-color: trans
 
 /* title */
 .tit_wrap {position: relative;}
-.tit_wrap .tit {margin-bottom: 4px;font-size: 1.125rem;line-height: 44px;}
-.tit_wrap .more {position: absolute;top: 0;right: -16px;width: 44px;height: 44px;}
+.tit_wrap .tit {margin: 32px 0 16px;font-size: 1.125rem;}
+.tit_wrap .more {position: absolute;top: -8px;right: -16px;width: 44px;height: 44px;}
 .tit_wrap .more::after, .more::before {content: '';display: block;position: absolute;background: #009DFF;}
 .tit_wrap .more::after {top: calc(50% - 6px);left: calc(50% - 1px);width: 2px;height: 12px;}
 .tit_wrap .more::before {top: calc(50% - 1px);left: calc(50% - 6px);width: 12px;height: 2px;}
@@ -118,20 +118,20 @@ header #mypage.on {width: 100%;height: 100%;border-radius: 0;border-color: trans
 .cnt_type1 > li:first-child {margin-left: 16px;}
 .cnt_type1 > li:last-child {margin-right: 16px;}
 .cnt_type1 .img_wrap {margin-bottom: 4px;width: 160px;height: 90px;}
-.cnt_type1 .img_wrap img {width: 100%;height: 100%;object-fit: cover;}
+.cnt_type1 .img_wrap img {width: 100%;height: 100%;object-fit: cover;border-radius: 12px;}
 .cnt_type1 .name .tit {font-size: 0.938rem;}
-.cnt_type1 .name .cate_name {position: relative;top: -2px;padding: 0 5px;font-size: 0.750rem;color: #EA002C;border: 0.5px solid #EA002C;border-radius: 6px;}
+.cnt_type1 .name .cate_name {position: relative;top: -1px;padding: 0 5px;font-size: 0.750rem;color: #EA002C;border: 1px solid #EA002C;border-radius: 6px;}
 .cnt_type1 .name {height: 2.8rem;line-height: 1.4;}
 
 /* home */
 #pid_home .art_wrap {margin-top: 60px;min-height: 0;}
 #pid_home .logo img {width: 48px;}
-#pid_home .logo {margin-bottom: 2rem;text-align: center;}
+#pid_home .logo {margin-bottom: 40px;text-align: center;}
 #pid_home .mid_bar {display: none;}
 
 /* 북마크 */
-#pid_home .bmk {padding: 0 55px;max-width: 360px;}
+#pid_home .bmk {margin: 40px 0 20px;padding: 0 55px;max-width: 360px;}
 #pid_home .bmk .flex {flex-flow: wrap;}
-#pid_home .bmk .box {width: 25%;text-align: center;}
-#pid_home .bmk .box .img {margin-bottom: 4px;width: 80%;height: auto;}
-#pid_home .bmk .box .txt {margin-bottom: 8px;font-size: 0.750rem;}
+#pid_home .bmk .box {width: 25%;padding: 0 8px;text-align: center;}
+#pid_home .bmk .box .img {margin-bottom: 4px;}
+#pid_home .bmk .box .txt {margin-bottom: 20px;font-size: 0.750rem;}
