--- a/res/css/common.css
+++ b/res/css/common.css
@@ -93,7 +93,7 @@ header #mypage.on {width: 100%;height: 100%;border-radius: 0;border-color: trans
 
 
 /* lay_out */
-#cnt {max-width: 750px;background: #fff;}
+#cnt {/* max-width: 750px; */background: #fff;}
 .lay_wrap.full {padding: 0;}
 .lay_wrap {max-width: 568px;margin: 0 auto;padding: 0 16px;}
 .art_wrap {margin-top: 104px;min-height: 200vh;}
@@ -124,7 +124,7 @@ header #mypage.on {width: 100%;height: 100%;border-radius: 0;border-color: trans
 .cnt_type1 .name {height: 2.8rem;line-height: 1.4;}
 
 /* home */
-#pid_home .art_wrap {margin-top: 60px;min-height: 0;}
+#pid_home .art_wrap {margin: 60px 0 0;min-height: 0;}
 #pid_home .logo img {width: 48px;}
 #pid_home .logo {margin-bottom: 40px;text-align: center;}
 #pid_home .mid_bar {display: none;}
@@ -135,3 +135,17 @@ header #mypage.on {width: 100%;height: 100%;border-radius: 0;border-color: trans
 #pid_home .bmk .box {width: 25%;padding: 0 8px;text-align: center;}
 #pid_home .bmk .box .img {margin-bottom: 4px;}
 #pid_home .bmk .box .txt {margin-bottom: 20px;font-size: 0.750rem;}
+
+
+.main_skt_service .swiper-slide {
+    width: 64px;
+    margin-right: 16px !important;
+}
+
+.main_skt_service .swiper-slide:first-child {
+    margin-left: 16px;
+}
+
+.main_skt_service .swiper-slide:last-child {
+    margin-right: 16px;
+}
