--- a/res/css/common.css
+++ b/res/css/common.css
@@ -80,11 +80,14 @@ header #btn_search {position: absolute;top: 0;right: 0;width: 44px;height: 44px;
 
 
 /* footer */
-footer .info {padding: 0 0 10px;text-align: center;font-size: 0;}
-footer .info a {padding: 10px 8px;font-size: 1rem;}
+footer .info {padding: 14px 0 10px;text-align: center;font-size: 0;}
+footer .info a {display: inline-block;padding: 10px 8px;font-size: 1rem;}
 footer .copyright {font-size: 0.875rem;text-align: center;}
-footer {padding-bottom: 64px;}
-footer .ad_wrap {margin:;}
+footer {text-align: center;padding-bottom: 64px;}
+footer .ad_wrap {
+    max-width: 536px;
+    padding: 0;
+}
 
 
 /* 마이페이지 */
@@ -93,7 +96,6 @@ header #mypage.on {width: 100%;height: 100%;border-radius: 0;border-color: trans
 
 
 /* lay_out */
-#cnt {/* max-width: 750px; */background: #fff;}
 .lay_wrap.full {padding: 0;}
 .lay_wrap {max-width: 568px;margin: 0 auto;padding: 0 16px;}
 .art_wrap {margin-top: 104px;min-height: 200vh;}
@@ -130,7 +132,7 @@ header #mypage.on {width: 100%;height: 100%;border-radius: 0;border-color: trans
 #pid_home .mid_bar {display: none;}
 
 /* 북마크 */
-#pid_home .bmk {margin: 40px 0 20px;padding: 0 55px;max-width: 360px;}
+#pid_home .bmk {margin: 40px auto 20px;padding: 0 55px;max-width: 360px;}
 #pid_home .bmk .flex {flex-flow: wrap;}
 #pid_home .bmk .box {width: 25%;padding: 0 8px;text-align: center;}
 #pid_home .bmk .box .img {margin-bottom: 4px;}
@@ -148,4 +150,8 @@ header #mypage.on {width: 100%;height: 100%;border-radius: 0;border-color: trans
 
 .main_skt_service .swiper-slide:last-child {
     margin-right: 16px;
+}
+
+#pid_home #cnt {
+    margin-bottom: 64px;
 }
